# bot_for_women_day

./: .env.default  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
app/: config.py  logging_config.yaml  main.py  requirements.txt
app/bot/: bot.py  commands.py
app/data_models/: models.py
app/logic/: parser.py  sender.py
src/: config.py  logging_config.json  main.py  models.py  tasks.py
src/bot/: bot.py  commands.py  models.py  parsers.py
src/bot/handlers/: __init__.py  common.py  generate.py
src/bot/handlers/polling/: __init__.py  pause.py  setup.py  start.py  stop.py
src/bot/logic/: parser.py  sender.py
src/logic/: parser.py  sender.py
tests/: conftest.py
tests/tests_bot/: test_parsers.py
tests/tests_sender/: test_polling_commands.py
